# Imagen

./: .gitignore  README.md  build-exe.bat  git-release.bat  index.html  package-lock.json  package.json  run-dev.bat  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-release.yml
scripts/: build-matrix.cjs  build-targets.json  update-version.cjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: image_generation.rs  image_ops.rs  lib.rs  main.rs  settings.rs  war3_jpeg.rs
src/components/: AppShell.tsx
src/config/: generation.ts  presets.ts  settings.ts
src/hooks/: useBatchCompose.ts  useBatchGeneration.ts  useConvertSettings.ts  useGeneration.ts  useGenerationTypes.ts  useProfilesAndPrompts.ts  useSettingsPersistenceEffects.ts  useSingleGeneration.ts
src/i18n/: index.ts
src/lib/: filePickers.ts  tauri.ts
src/pages/: BatchComposePage.tsx  BatchConvertPage.tsx  BatchGeneratePage.tsx  SettingsModal.tsx  SingleGenerateImageToImageSection.tsx  SingleGeneratePage.tsx  SingleGeneratePromptField.tsx  SingleGenerateReferenceLibrarySection.tsx  SingleGenerateWorkspace.tsx  singleGenerateParamSchema.ts
src/types/: app.ts
